# Archived_Tremor

./: Cargo.toml  README.md  build.rs
src/: client.rs  constants.rs  event_journal.rs  event_queue.rs  gfx_redux.rs  main.rs  server.rs  shader.vert  socket_manager.rs  window.rs
src/client/: mod.rs
src/gfx/: camera.rs  conversions.rs  input_handler.rs  instance.rs  light.rs  mod.rs  model.rs  model_transform.rs  poly_renderer.rs  shapes.rs  (+9 more)
v0/: Readme.md  build.rs
v1/: .gitignore  Cargo.toml  License.md  Readme.md
v1/benchy/: Cargo.toml  README.md
v1/benchy/src/: lib.rs
v1/data_structures/: Cargo.toml  README.md
v1/data_structures/src/: circle_buffer.rs  lib.rs
v1/game_math/: Cargo.toml  README.md
v1/game_math/src/: f32.rs  fix.rs  lib.rs  macros.rs  mat4.rs  quaternion.rs  vec2.rs  vec3.rs  vec4.rs  vectors.rs
v1/job_scheduler/: Cargo.toml
v1/job_scheduler/src/: lib.rs
v1/networking/: Cargo.toml
v1/networking/src/: lib.rs  rollback.rs
v1/networking/src/encryption/: mod.rs
v1/networking/src/network/: mod.rs  packet.rs  socket_manager.rs
v1/networking/src/network/bitstream/: mod.rs  packable.rs
v1/networking/src/network/connection_layer/: mod.rs
v1/portia/: Cargo.toml  README.md  build.rs
v1/portia/src/: input.rs  lib.rs
v1/portia/src/file_system/: asset_loader.rs  mod.rs
v1/portia/src/gfx/: mod.rs  old_renderer.rs  uniform_container.rs  uniforms.rs
v1/portia/src/gfx/fonts/: font_renderer.rs  mod.rs  vertex.rs
v1/portia/src/gfx/p_gltf/: animations.rs  boundingbox.rs  manager.rs  material.rs  mesh.rs  mod.rs  node.rs  primitive.rs  scene.rs  skin.rs  textures.rs  vert_indices.rs
v1/portia/src/gfx/renderer/: mod.rs  shader_pipeline.rs  window_pipeline.rs
v1/portia/src/gfx/renderer/debug_pipeline/: mod.rs  vertex.rs
v1/portia/src/gfx/renderer/scene_pipeline/: mod.rs
v1/portia/src/gfx/renderer/scene_pipeline_obj/: instance.rs  mod.rs  uniforms.rs
v1/portia/src/gfx/renderer/scene_pipeline_obj/model/: mod.rs
v1/portia/src/gfx/shaders/: debug_scene.frag  debug_scene.vert  obj_scene.frag  obj_scene.vert  pbr.frag  pbr.vert  sdf_font.frag  sdf_font.vert  sprite.frag  text.vert  window.frag  window.vert
v1/portia/src/gfx/shaders/spv/: debug_scene.frag.spv  debug_scene.vert.spv  obj_scene.vert.spv  pbr.frag.spv  pbr.vert.spv  scene.frag.spv  sdf.frag.spv  sdf.vert.spv  sdf_font.vert.spv  sprite.frag.spv  sprite.vert.spv  verts.frag.spv  verts.vert.spv  window.frag.spv  window.vert.spv  window_scene.frag.spv  window_scene.vert.spv
v1/portia/src/gfx/sprites/: mod.rs  sprite_renderer.rs  vertex.rs
v1/portia/src/gui/: button.rs  cursor_interactable.rs  label.rs  mod.rs
v1/portia/src/job_scheduler/: mod.rs
v1/portia/src/math/: mod.rs  number_impls.rs  quartenion.rs  vec3.rs
v1/portia/src/time/: mod.rs
v1/portia_client_server/: Cargo.toml
v1/portia_client_server/src/: lib.rs
v1/portia_client_server/src/ecs/: mod.rs
v1/portia_client_server/src/ecs/components/: controllable.rs  ghosting.rs  mesh.rs  mod.rs  spatial.rs
v1/rendering_ir/: Cargo.toml  README.md
v1/rendering_ir/src/: build.rs  camera3d.rs  lib.rs  obj.rs
v1/rendering_ir/src/wgpu_helpers/: instance.rs  mod.rs  texture.rs  vertex.rs
v1/res/: wizard_revised.glb
v1/res/models/monkey/: monkey_2.glb
v1/res/monkey_blend/: monkey.blend  monkey.blend1  monkey.mtl
v1/src/: main.rs
v1/src/fighting_game/: input_poller.rs  mod.rs
v1/src/fighting_game/idea_for_game/: character_stats.rs  game.rs
v1/verlet/: Cargo.toml
v1/verlet/src/: lib.rs  numbers.rs  particle.rs
(+108 files in other folders)
