[package]
name = "tremor"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24.1"
gl = "0.14.0"
image = "0.23.9"
fixed = "1.2.0"
fixed-sqrt = "0.2.1"

# WGPU
wgpu = "0.6.0"
winit = "0.23.0"
futures = "0.3.5"
wgpu-subscriber = "0.1.0"
cgmath = "0.17.0"

# Whatsmyip dependencies
hyper = "0.13.8"