[package]
name = "tremor"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.24"
gl = "0.14"
image = "0.23"
fixed = "1.2"
fixed-sqrt = "0.2"

# WGPU
wgpu = "0.6"
winit = "0.23"
futures = "0.3"
wgpu-subscriber = "0.1"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
bytemuck = "1.4"

# Whatsmyip dependencies
hyper = "0.13.8"

[build-dependencies]
shaderc = "0.6"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
