[package]
name = "final_destination"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal crates
game_math = {path = "game_math"}
portia = {path = "portia"}
cgmath = "0.18"
portia_client_server = {path = "portia_client_server"}
networking = {path="networking"}
verlet = {path="verlet"}
