[package]
name = "portia"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# Internal crates
game_math = {path = "../game_math"}
data_structures = {path = "../data_structures"}
benchy = {path = "../benchy"}
job_scheduler = {path = "../job_scheduler"}
rendering_ir = {path = "../rendering_ir", features=["full3d", "wgpu_helpers"]}

#
image = "0.23"
rayon = "1.5"
lazy_static = "1.4.0"
walkdir = "2"

# WGPU
wgpu = "0.6"
winit = "0.24"
futures = "0.3"
wgpu-subscriber = "0.1"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
bytemuck = {version = "1", features = ["derive"]}
tobj = "2.0"
gltf = "0.15"
rusttype = "0.9"

[build-dependencies]
rendering_ir = {path = "../rendering_ir", features=["build_helpers"]}

shaderc = "0.7"
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
rayon = "1.5"
lazy_static = "1.4.0"
