[package]
name = "rendering_ir"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
obj = ["tobj", "image"]
camera3d = []
full3d = ["obj", "camera3d"]
wgpu_helpers = ["wgpu", "image"]
build_helpers = ["shaderc", "anyhow", "fs_extra", "glob", "rayon", "lazy_static"]

[dependencies]
bytemuck = {version = "1", features = ["derive"]}
cgmath = "0.18"


image = {version = "0.23", optional = true}
tobj = {version = "2", optional = true}
wgpu = {version = "0.6", optional = true}


# WGPU_Build
shaderc = {version = "0.7", optional = true}
anyhow = {version = "1.0", optional = true}
fs_extra = {version = "1.2", optional = true}
glob = {version = "0.3", optional = true}
rayon = {version = "1.5", optional = true}
lazy_static = {version = "1.4.0", optional = true}
